fixes overflow issue

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ h1 {
 .outer-grid-container {
     display:grid;
     grid-template-columns: 70% 30%;
+
 }
 .column-2 {
     padding-right: 20px;
@@ -541,7 +542,6 @@ ul p {
     .column-2 {
         width: 45%;
         position:absolute;
-        overflow-x: auto;
         top:0;
         right:0;
         height:100%;
@@ -549,6 +549,9 @@ ul p {
         z-index: 2;
         background-color: #fdf9ee;
         transition: transform 0.5s ease;
+    }
+    .outer-grid-container{
+        overflow: hidden;
     }
     .slide {
         transform: translateX(0);
